docs/en/4.1.0/api/webview.md
#WebView
<div class="btn-group"><a href="#Methods" class="btn"><i class="icon-cog"></i> Methods<sup>&nbsp;11</sub></a><a class="btn dropdown-toggle" data-toggle="dropdown" data-target="#" href="#Methods" >  <span class="caret"></span>&nbsp;</a><ul class="dropdown-menu" style="max-height: 500px;overflow: auto;"><li class="disabled"><a tabindex="-1" href="#"><b><i>Methods - Class</i></b></a><li><a href="#mactive_tab" data-target="cMethodactive_tab" class="autouncollapse"><span class='text-error'>active_tab</span></a></li><li><a href="#mcurrentLocation" data-target="cMethodcurrentLocation" class="autouncollapse">currentLocation</a></li><li><a href="#mcurrentURL" data-target="cMethodcurrentURL" class="autouncollapse">&nbsp;<span class='text-info'>currentURL</span></a></li><li><a href="#mexecuteJavascript" data-target="cMethodexecuteJavascript" class="autouncollapse">&nbsp;<span class='text-info'>executeJavascript</span></a></li><li><a href="#mfull_screen_mode" data-target="cMethodfull_screen_mode" class="autouncollapse"><span class='text-error'>full_screen_mode</span></a></li><li><a href="#mnavigate" data-target="cMethodnavigate" class="autouncollapse">navigate</a></li><li><a href="#mnavigateBack" data-target="cMethodnavigateBack" class="autouncollapse">navigateBack</a></li><li><a href="#mrefresh" data-target="cMethodrefresh" class="autouncollapse">refresh</a></li><li><a href="#msave" data-target="cMethodsave" class="autouncollapse">save</a></li><li><a href="#msetCookie" data-target="cMethodsetCookie" class="autouncollapse">setCookie</a></li><li><a href="#mset_menu_items" data-target="cMethodset_menu_items" class="autouncollapse"><span class='text-error'>set_menu_items</span></a></li></li></ul></div><div class="btn-group"><a href="#Properties" class="btn"><i class="icon-list"></i> Properties<sup>&nbsp;16</sup></a><button href="#" class="btn dropdown-toggle" data-toggle="dropdown">  <span class="caret"></span>&nbsp;</button><ul class="dropdown-menu" style="max-height: 500px;overflow: auto;"><li class="disabled"><a tabindex="-1" href="#"><b><i>Class Properties</i></b></a><li><a href="#pactiveTab" data-target="cPropertyactiveTab" class="autouncollapse">activeTab</a></li><li><a href="#pcacheSize" data-target="cPropertycacheSize" class="autouncollapse">cacheSize</a></li><li><a href="#penableCache" data-target="cPropertyenableCache" class="autouncollapse">enableCache</a></li><li><a href="#penablePageLoadingIndication" data-target="cPropertyenablePageLoadingIndication" class="autouncollapse">enablePageLoadingIndication</a></li><li><a href="#penableWebPlugins" data-target="cPropertyenableWebPlugins" class="autouncollapse">enableWebPlugins</a></li><li><a href="#penableZoom" data-target="cPropertyenableZoom" class="autouncollapse">enableZoom</a></li><li><a href="#pfontFamily" data-target="cPropertyfontFamily" class="autouncollapse">fontFamily</a></li><li><a href="#pframework" data-target="cPropertyframework" class="autouncollapse">framework</a></li><li><a href="#pfullScreen" data-target="cPropertyfullScreen" class="autouncollapse">fullScreen</a></li><li><a href="#pnavigationTimeout" data-target="cPropertynavigationTimeout" class="autouncollapse">navigationTimeout</a></li><li><a href="#pscrollTechnique" data-target="cPropertyscrollTechnique" class="autouncollapse">scrollTechnique</a></li><li><a href="#ptextZoomLevel" data-target="cPropertytextZoomLevel" class="autouncollapse">textZoomLevel</a></li><li><a href="#puserAgent" data-target="cPropertyuserAgent" class="autouncollapse">userAgent</a></li><li><a href="#pviewportEnabled" data-target="cPropertyviewportEnabled" class="autouncollapse">viewportEnabled</a></li><li><a href="#pviewportWidth" data-target="cPropertyviewportWidth" class="autouncollapse">viewportWidth</a></li><li><a href="#pzoomPage" data-target="cPropertyzoomPage" class="autouncollapse">zoomPage</a></li></li></ul></div><div class="btn-group"><a href="#Examples" class="btn"><i class="icon-edit"></i> Examples<sup>&nbsp;5</sup></a><button href="#" class="btn dropdown-toggle" data-toggle="dropdown">  <span class="caret"></span>&nbsp;</button><ul class="dropdown-menu" style="max-height: 500px;overflow: auto;"><li><a href="#e0" data-target="eExample0" class="autouncollapse">Execute javascript</a></li><li><a href="#e1" data-target="eExample1" class="autouncollapse">Use full-screen mode</a></li><li><a href="#e2" data-target="eExample2" class="autouncollapse">Navigate</a></li><li><a href="#e3" data-target="eExample3" class="autouncollapse">Navigate back</a></li><li><a href="#e4" data-target="eExample4" class="autouncollapse">Refresh the page</a></li></ul></div><div class="btn-group pull-right"><button class="btn dropdown-toggle" id="apiFilterBtn" data-toggle="dropdown" href="#" title="Filter Properties and Methods"><i class="icon-filter "></i>Show</button><select id="apiFilter" class="dropdown-menu apiFilter"><option value="all">All</option><option value="js">Javascript</option><option value="ruby">Ruby</option><option value="android">Android</option><option value="ios">iOS</option><option value="wm">Windows Mobile</option><option value="wp8">Windows Phone 8</option><option value="w32">Windows Desktop</option><option value="msi">MSI Only</option></select></div><div  id="apibody" style="overflow:auto;padding-right: 5px;">
<p>The <code>Webview</code> is the core container used for rendering your application code. You can control certain behaviors of the webview by using this API class.</p>
<h2>Enabling the API</h2>

<p>This API is part of the <code>coreapi</code> extension that is included automatically.</p>

<pre><code>:::ruby
extensions: ["coreapi"]
</code></pre>

<h2>JavaScript Usage</h2>

<p>Be sure to review the <a href="/guide/api_js">JavaScript API Usage</a> guide for important information about using this API in JavaScript.</p>

<h2>Ruby Usage</h2>

<p>Be sure to review the <a href="/guide/api_ruby">Ruby API Usage</a> guide for important information about using this API in Ruby.</p>


<a name='Methods'></a>
<h2><i class='icon-cog'></i>Methods</h2>

<div class="accordion" id="accordion"><a name ='mactive_tab'/><div class=' method  js ruby android ios wp8' id='mactive_tab'><h3><strong  ><span class="text-error">active_tab</span></strong><span style='font-size:.7em;font-weight:normal;'>()</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mactive_tab1" data-toggle="tab">Description</a></li><li ><a href="#mactive_tab4" data-toggle="tab">Return</a></li><li ><a href="#mactive_tab6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-active_tab'><div class="tab-pane fade active in" id="mactive_tab1"><span class='label label-important'>Deprecated</span> <p>Use Rho::NativeTabbar.currentTab property: returns the current tab index.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mactive_tab2"></div><div class="tab-pane fade" id="mactive_tab3"></div><div class="tab-pane fade" id="mactive_tab4"><div><p><strong>Synchronous Return:</strong></p><ul><li>INTEGER</li></ul></div></div><div class="tab-pane fade" id="mactive_tab6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.WebView.active_tab()</code> </li><li>Ruby: <code>Rho::WebView.active_tab()</code></li></ul></li></ul></div></div></div>  </div><a name ='mcurrentLocation'/><div class=' method  ruby android ios wp8' id='mcurrentLocation'><h3><strong  >currentLocation</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">INTEGER</span> tabIndex)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mcurrentLocation1" data-toggle="tab">Description</a></li><li ><a href="#mcurrentLocation2" data-toggle="tab">Parameters</a></li><li ><a href="#mcurrentLocation4" data-toggle="tab">Return</a></li><li ><a href="#mcurrentLocation6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-currentLocation'><div class="tab-pane fade active in" id="mcurrentLocation1"><p>Returns the relative url (location) of the current page(without server and port); the last URL loaded to WebView from Ruby controller action.</p>
<p><div><p><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mcurrentLocation2"><div><p><strong>Parameters</strong></p><ul><li>tabIndex : <span class='text-info'>INTEGER</span> <span class='label label-info'>Optional</span><span class='label '> Default: -1</span><p><p>TabBar tab index. If no tab bar present, index is ignored.Tab should be loaded once to return current url.</p>
 <p>Current location of active WebView.</p>
</p></li></ul></div></div><div class="tab-pane fade" id="mcurrentLocation3"></div><div class="tab-pane fade" id="mcurrentLocation4"><div><p><strong>Synchronous Return:</strong></p><ul><li>STRING</li></ul></div></div><div class="tab-pane fade" id="mcurrentLocation6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>Ruby: <code>Rho::WebView.currentLocation(<span class="text-info">INTEGER</span> tabIndex)</code></li></ul></li></ul></div></div></div>  </div><a name ='mcurrentURL'/><div class=' method  ruby android ios' id='mcurrentURL'><h3><strong  ><span class="text-info">currentURL</span></strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">INTEGER</span> tabIndex)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mcurrentURL1" data-toggle="tab">Description</a></li><li ><a href="#mcurrentURL2" data-toggle="tab">Parameters</a></li><li ><a href="#mcurrentURL4" data-toggle="tab">Return</a></li><li ><a href="#mcurrentURL6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-currentURL'><div class="tab-pane fade active in" id="mcurrentURL1"><span class='label label-info'>Replaces:</span> <span class='label label-info'>get_current_url</span>  <p>Returns the actual URL in WebView. This works the same as the JavaScript window.location.href.</p>
<p><div><p><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"></p></div></p></div><div class="tab-pane fade" id="mcurrentURL2"><div><p><strong>Parameters</strong></p><ul><li>tabIndex : <span class='text-info'>INTEGER</span> <span class='label label-info'>Optional</span><span class='label '> Default: -1</span><p><p>TabBar tab index. If no tab bar present, index is ignored.</p>
 <p>Current url of active WebView.</p>
</p></li></ul></div></div><div class="tab-pane fade" id="mcurrentURL3"></div><div class="tab-pane fade" id="mcurrentURL4"><div><p><strong>Synchronous Return:</strong></p><ul><li>STRING</li></ul></div></div><div class="tab-pane fade" id="mcurrentURL6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>Ruby: <code>Rho::WebView.currentURL(<span class="text-info">INTEGER</span> tabIndex)</code></li></ul></li></ul></div></div></div>  </div><a name ='mexecuteJavascript'/><div class=' method  ruby android ios wp8' id='mexecuteJavascript'><h3><strong  ><span class="text-info">executeJavascript</span></strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">STRING</span> javascriptText, <span class="text-info">INTEGER</span> tabIndex)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mexecuteJavascript1" data-toggle="tab">Description</a></li><li ><a href="#mexecuteJavascript2" data-toggle="tab">Parameters</a></li><li ><a href="#mexecuteJavascript4" data-toggle="tab">Return</a></li><li ><a href="#mexecuteJavascript6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-executeJavascript'><div class="tab-pane fade active in" id="mexecuteJavascript1"><span class='label label-info'>Replaces:</span> <span class='label label-info'>execute_js</span> <span class='label label-info'>executeJavaScript</span>  <p>Execute JavaScript on the current page from your controller.</p>
<p><div><p><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mexecuteJavascript2"><div><p><strong>Parameters</strong></p><ul><li>javascriptText : <span class='text-info'>STRING</span><p><p>The call to the JavaScript method on the current page, such as &ldquo;test();&rdquo;.</p>
 </p></li><li>tabIndex : <span class='text-info'>INTEGER</span> <span class='label label-info'>Optional</span><span class='label '> Default: -1</span><p><p>TabBar tab index. If no tab bar present, index is ignored.</p>
 <p>Execute javascript in active WebView.</p>
</p></li></ul></div></div><div class="tab-pane fade" id="mexecuteJavascript3"></div><div class="tab-pane fade" id="mexecuteJavascript4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mexecuteJavascript6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>Ruby: <code>Rho::WebView.executeJavascript(<span class="text-info">STRING</span> javascriptText, <span class="text-info">INTEGER</span> tabIndex)</code></li></ul></li></ul></div></div></div>  </div><a name ='mfull_screen_mode'/><div class=' method  js ruby android ios wp8' id='mfull_screen_mode'><h3><strong  ><span class="text-error">full_screen_mode</span></strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">BOOLEAN</span> enable)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mfull_screen_mode1" data-toggle="tab">Description</a></li><li ><a href="#mfull_screen_mode2" data-toggle="tab">Parameters</a></li><li ><a href="#mfull_screen_mode4" data-toggle="tab">Return</a></li><li ><a href="#mfull_screen_mode6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-full_screen_mode'><div class="tab-pane fade active in" id="mfull_screen_mode1"><span class='label label-important'>Deprecated</span> <p>Use WebView.fullScreen property: Switch to / from full screen mode.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mfull_screen_mode2"><div><p><strong>Parameters</strong></p><ul><li>enable : <span class='text-info'>BOOLEAN</span><p> </p></li></ul></div></div><div class="tab-pane fade" id="mfull_screen_mode3"></div><div class="tab-pane fade" id="mfull_screen_mode4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mfull_screen_mode6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.WebView.full_screen_mode(<span class="text-info">BOOLEAN</span> enable)</code> </li><li>Ruby: <code>Rho::WebView.full_screen_mode(<span class="text-info">BOOLEAN</span> enable)</code></li></ul></li></ul></div></div></div>  </div><a name ='mnavigate'/><div class=' method  js ruby android ios wp8' id='mnavigate'><h3><strong  >navigate</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">STRING</span> url, <span class="text-info">INTEGER</span> tabIndex)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mnavigate1" data-toggle="tab">Description</a></li><li ><a href="#mnavigate2" data-toggle="tab">Parameters</a></li><li ><a href="#mnavigate4" data-toggle="tab">Return</a></li><li ><a href="#mnavigate6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-navigate'><div class="tab-pane fade active in" id="mnavigate1"><p>Force WebView to navigate to a URL.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mnavigate2"><div><p><strong>Parameters</strong></p><ul><li>url : <span class='text-info'>STRING</span><p><p>Navigate to this url.</p>
 </p></li><li>tabIndex : <span class='text-info'>INTEGER</span> <span class='label label-info'>Optional</span><span class='label '> Default: -1</span><p><p>TabBar tab index. If no tab bar present, index is ignored. Please avoid of navigate in not opened tab &ndash; this is unsupported on Android.</p>
 <p>Refresh active WebView.</p>
</p></li></ul></div></div><div class="tab-pane fade" id="mnavigate3"></div><div class="tab-pane fade" id="mnavigate4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mnavigate6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.WebView.navigate(<span class="text-info">STRING</span> url, <span class="text-info">INTEGER</span> tabIndex)</code> </li><li>Ruby: <code>Rho::WebView.navigate(<span class="text-info">STRING</span> url, <span class="text-info">INTEGER</span> tabIndex)</code></li></ul></li></ul></div></div></div>  </div><a name ='mnavigateBack'/><div class=' method  js ruby android ios wp8' id='mnavigateBack'><h3><strong  >navigateBack</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">INTEGER</span> tabIndex)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mnavigateBack1" data-toggle="tab">Description</a></li><li ><a href="#mnavigateBack2" data-toggle="tab">Parameters</a></li><li ><a href="#mnavigateBack4" data-toggle="tab">Return</a></li><li ><a href="#mnavigateBack6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-navigateBack'><div class="tab-pane fade active in" id="mnavigateBack1"><p>Force WebView to navigate to the previous page using Browser back.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mnavigateBack2"><div><p><strong>Parameters</strong></p><ul><li>tabIndex : <span class='text-info'>INTEGER</span> <span class='label label-info'>Optional</span><span class='label '> Default: -1</span><p><p>TabBar tab index. If no tab bar present, index is ignored.</p>
 <p>Navigate back in active WebView.</p>
</p></li></ul></div></div><div class="tab-pane fade" id="mnavigateBack3"></div><div class="tab-pane fade" id="mnavigateBack4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mnavigateBack6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.WebView.navigateBack(<span class="text-info">INTEGER</span> tabIndex)</code> </li><li>Ruby: <code>Rho::WebView.navigateBack(<span class="text-info">INTEGER</span> tabIndex)</code></li></ul></li></ul></div></div></div>  </div><a name ='mrefresh'/><div class=' method  js ruby android ios wp8' id='mrefresh'><h3><strong  >refresh</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">INTEGER</span> tabIndex)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mrefresh1" data-toggle="tab">Description</a></li><li ><a href="#mrefresh2" data-toggle="tab">Parameters</a></li><li ><a href="#mrefresh4" data-toggle="tab">Return</a></li><li ><a href="#mrefresh6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-refresh'><div class="tab-pane fade active in" id="mrefresh1"><p>Force WebView to refresh the current page.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mrefresh2"><div><p><strong>Parameters</strong></p><ul><li>tabIndex : <span class='text-info'>INTEGER</span> <span class='label label-info'>Optional</span><span class='label '> Default: -1</span><p><p>TabBar tab index. If no tab bar present, index is ignored.</p>
 <p>Refresh active WebView.</p>
</p></li></ul></div></div><div class="tab-pane fade" id="mrefresh3"></div><div class="tab-pane fade" id="mrefresh4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mrefresh6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.WebView.refresh(<span class="text-info">INTEGER</span> tabIndex)</code> </li><li>Ruby: <code>Rho::WebView.refresh(<span class="text-info">INTEGER</span> tabIndex)</code></li></ul></li></ul></div></div></div>  </div><a name ='msave'/><div class=' method  js ruby android' id='msave'><h3><strong  >save</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">STRING</span> format, <span class="text-info">STRING</span> path, <span class="text-info">INTEGER</span> tabIndex)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#msave1" data-toggle="tab">Description</a></li><li ><a href="#msave2" data-toggle="tab">Parameters</a></li><li ><a href="#msave4" data-toggle="tab">Return</a></li><li ><a href="#msave6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-save'><div class="tab-pane fade active in" id="msave1"><p>Save current page to file system.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"></p></div></p></div><div class="tab-pane fade" id="msave2"><div><p><strong>Parameters</strong></p><ul><li>format : <span class='text-info'>STRING</span><p><p>Format of the saved page.</p>
 </p><p><strong>Possible Values</strong> :</p> <dl  ><dt>Constant: Rho::WebView.SAVE_FORMAT_JPEG (For Ruby use "::" instead of ".")<br/> String:jpeg</dt><dd><p>Save as jpeg image.</p>
</dt></dl></li><li>path : <span class='text-info'>STRING</span><p><p>Path to the file / folder to save the page.</p>
 </p></li><li>tabIndex : <span class='text-info'>INTEGER</span> <span class='label label-info'>Optional</span><span class='label '> Default: -1</span><p><p>TabBar tab index. If no tab bar present, index is ignored.</p>
 <p>If tabbar index omitted then active WebView will be saved.</p>
</p></li></ul></div></div><div class="tab-pane fade" id="msave3"></div><div class="tab-pane fade" id="msave4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="msave6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.WebView.save(<span class="text-info">STRING</span> format, <span class="text-info">STRING</span> path, <span class="text-info">INTEGER</span> tabIndex)</code> </li><li>Ruby: <code>Rho::WebView.save(<span class="text-info">STRING</span> format, <span class="text-info">STRING</span> path, <span class="text-info">INTEGER</span> tabIndex)</code></li></ul></li></ul></div></div></div>  </div><a name ='msetCookie'/><div class=' method  ruby android ios' id='msetCookie'><h3><strong  >setCookie</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">STRING</span> url, <span class="text-info">STRING</span> cookie)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#msetCookie1" data-toggle="tab">Description</a></li><li ><a href="#msetCookie2" data-toggle="tab">Parameters</a></li><li ><a href="#msetCookie4" data-toggle="tab">Return</a></li><li ><a href="#msetCookie6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-setCookie'><div class="tab-pane fade active in" id="msetCookie1"><p>When WebView loads the specified url (either by selecting link or from calling WebView.navigate), it will add this cookie to the HTTP request.Not implemented for Zebra Technologies' WebKit.</p>
<p><div><p><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="msetCookie2"><div><p><strong>Parameters</strong></p><ul><li>url : <span class='text-info'>STRING</span><p><p>Set a cookie to be used by WebView for this url.</p>
 </p></li><li>cookie : <span class='text-info'>STRING</span><p><p>One or more name-value pairs of the format &ldquo;NAME=VALUE&rdquo;. Separate multiple name-value pairs with a semicolon, such as &ldquo;NAME1=VALUE1; NAME2=VALUE2&rdquo;.</p>
 </p></li></ul></div></div><div class="tab-pane fade" id="msetCookie3"></div><div class="tab-pane fade" id="msetCookie4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="msetCookie6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>Ruby: <code>Rho::WebView.setCookie(<span class="text-info">STRING</span> url, <span class="text-info">STRING</span> cookie)</code></li></ul></li></ul></div></div></div>  </div><a name ='mset_menu_items'/><div class=' method  js ruby android' id='mset_menu_items'><h3><strong  ><span class="text-error">set_menu_items</span></strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">HASH</span> menuItems)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mset_menu_items1" data-toggle="tab">Description</a></li><li ><a href="#mset_menu_items2" data-toggle="tab">Parameters</a></li><li ><a href="#mset_menu_items4" data-toggle="tab">Return</a></li><li ><a href="#mset_menu_items6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-set_menu_items'><div class="tab-pane fade active in" id="mset_menu_items1"><span class='label label-important'>Deprecated</span> <p>Use Rho::Application.nativeMenu property: set native menu items.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="mset_menu_items2"><div><p><strong>Parameters</strong></p><ul><li>menuItems : <span class='text-info'>HASH</span><p><p>Map of menu items: name to action.</p>
 </p></li></ul></div></div><div class="tab-pane fade" id="mset_menu_items3"></div><div class="tab-pane fade" id="mset_menu_items4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mset_menu_items6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.WebView.set_menu_items(<span class="text-info">HASH</span> menuItems)</code> </li><li>Ruby: <code>Rho::WebView.set_menu_items(<span class="text-info">HASH</span> menuItems)</code></li></ul></li></ul></div></div></div>  </div></div>
<a name='Properties'></a>
<h2><i class='icon-list'></i>Properties</h2>

<a name='pactiveTab'></a><div class=' method  js ruby android ios wp8' id='pactiveTab'><h3><strong  >activeTab</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>INTEGER</span> <span class='label'>Read Only</span> </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pactiveTab1" data-toggle="tab">Description</a></li><li ><a href="#pactiveTab6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-activeTab'><div class="tab-pane fade active in" id="pactiveTab1"><p>Return an active tab index. For change active tab use Use Rho.NativeTabbar.currentTab property.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"> </p></div></p></div><div class="tab-pane fade" id="pactiveTab2"></div><div class="tab-pane fade" id="pactiveTab5"></div><div class="tab-pane fade" id="pactiveTab6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.WebView.activeTab</code> </li><li>Ruby: <code>Rho::WebView.activeTab</code></li></ul></li></ul></div></div></div>  </div><a name='pcacheSize'></a><div class=' method  js ruby' id='pcacheSize'><h3><strong  >cacheSize</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>INTEGER</span> <span class='label'>Read Only</span> </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pcacheSize1" data-toggle="tab">Description</a></li><li ><a href="#pcacheSize6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-cacheSize'><div class="tab-pane fade active in" id="pcacheSize1"><p>The browser cache size, in whole MBs. Defines in config.xml: Navigation\Cache.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"> </p></div></p></div><div class="tab-pane fade" id="pcacheSize2"></div><div class="tab-pane fade" id="pcacheSize5"></div><div class="tab-pane fade" id="pcacheSize6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.WebView.cacheSize</code> </li><li>Ruby: <code>Rho::WebView.cacheSize</code></li></ul></li></ul></div></div></div>  </div><a name='penableCache'></a><div class=' method  js ruby android' id='penableCache'><h3><strong  >enableCache</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>BOOLEAN</span> <span class='label'>Read Only</span> </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#penableCache1" data-toggle="tab">Description</a></li><li ><a href="#penableCache2" data-toggle="tab">Params</a></li><li ><a href="#penableCache6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-enableCache'><div class="tab-pane fade active in" id="penableCache1"><p>Enable / disable Browser cache. Use &lsquo;WebView.enableCache&rsquo; parameter in rhoconfig.txt to configure this value.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"> </p></div></p></div><div class="tab-pane fade" id="penableCache2"><p><strong>Default:</strong> true</p></div><div class="tab-pane fade" id="penableCache5"></div><div class="tab-pane fade" id="penableCache6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.WebView.enableCache</code> </li><li>Ruby: <code>Rho::WebView.enableCache</code></li></ul></li></ul></div></div></div>  </div><a name='penablePageLoadingIndication'></a><div class=' method  js ruby android' id='penablePageLoadingIndication'><h3><strong  >enablePageLoadingIndication</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>BOOLEAN</span> <span class='label'>Read Only</span> </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#penablePageLoadingIndication1" data-toggle="tab">Description</a></li><li ><a href="#penablePageLoadingIndication2" data-toggle="tab">Params</a></li><li ><a href="#penablePageLoadingIndication6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-enablePageLoadingIndication'><div class="tab-pane fade active in" id="penablePageLoadingIndication1"><p>Show page loading indication. On Windows Mobile/CE this property can be set only in config.xml: GUI\HourglassEnabled. At Android  use &lsquo;disable_loading_indication&rsquo; parameter in rhoconfig.txt to configure this value.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"> </p></div></p></div><div class="tab-pane fade" id="penablePageLoadingIndication2"><p><strong>Default:</strong> true</p></div><div class="tab-pane fade" id="penablePageLoadingIndication5"></div><div class="tab-pane fade" id="penablePageLoadingIndication6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.WebView.enablePageLoadingIndication</code> </li><li>Ruby: <code>Rho::WebView.enablePageLoadingIndication</code></li></ul></li></ul></div></div></div>  </div><a name='penableWebPlugins'></a><div class=' method  js ruby android' id='penableWebPlugins'><h3><strong  >enableWebPlugins</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>BOOLEAN</span> <span class='label'>Read Only</span> </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#penableWebPlugins1" data-toggle="tab">Description</a></li><li ><a href="#penableWebPlugins2" data-toggle="tab">Params</a></li><li ><a href="#penableWebPlugins6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-enableWebPlugins'><div class="tab-pane fade active in" id="penableWebPlugins1"><p>Enable / disable web plug-ins. Use &lsquo;enable_web_plugins&rsquo; parameter in rhoconfig.txt to configure this value. This option only has effect on Android versions before 4.0 (ICS). It mainly affects if Flash content is displayed.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"> </p></div></p></div><div class="tab-pane fade" id="penableWebPlugins2"><p><strong>Default:</strong> true</p></div><div class="tab-pane fade" id="penableWebPlugins5"></div><div class="tab-pane fade" id="penableWebPlugins6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.WebView.enableWebPlugins</code> </li><li>Ruby: <code>Rho::WebView.enableWebPlugins</code></li></ul></li></ul></div></div></div>  </div><a name='penableZoom'></a><div class=' method  js ruby android' id='penableZoom'><h3><strong  >enableZoom</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>BOOLEAN</span> <span class='label'>Read Only</span> </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#penableZoom1" data-toggle="tab">Description</a></li><li ><a href="#penableZoom2" data-toggle="tab">Params</a></li><li ><a href="#penableZoom6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-enableZoom'><div class="tab-pane fade active in" id="penableZoom1"><p>Enable WebView zoom. Use &lsquo;enable_screen_zoom&rsquo; parameter in rhoconfig.txt to configure this value.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"> </p></div></p></div><div class="tab-pane fade" id="penableZoom2"><p><strong>Default:</strong> true</p></div><div class="tab-pane fade" id="penableZoom5"></div><div class="tab-pane fade" id="penableZoom6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.WebView.enableZoom</code> </li><li>Ruby: <code>Rho::WebView.enableZoom</code></li></ul></li></ul></div></div></div>  </div><a name='pfontFamily'></a><div class=' method  js ruby' id='pfontFamily'><h3><strong  >fontFamily</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>STRING</span> <span class='label'>Read Only</span> </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pfontFamily1" data-toggle="tab">Description</a></li><li ><a href="#pfontFamily6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-fontFamily'><div class="tab-pane fade active in" id="pfontFamily1"><p>Specifies the default font to use when rendering text in web pages. The specified font should be a TrueType font present on the device. On Windows the default font has been set to &lsquo;Tahoma&rsquo; as this is present on all Zebra WM / CE devices, note that Tahoma has no italic or oblique variants. On the Enterprise Tablet the default is Droid Sans Fallback. The font specified must be stored in \Windows for Windows WM / CE devices, or /system/fonts for Enterprise Tablet. Defines in config.xml: HTMLStyles\FontFamily</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"> </p></div></p></div><div class="tab-pane fade" id="pfontFamily2"></div><div class="tab-pane fade" id="pfontFamily5"></div><div class="tab-pane fade" id="pfontFamily6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.WebView.fontFamily</code> </li><li>Ruby: <code>Rho::WebView.fontFamily</code></li></ul></li></ul></div></div></div>  </div><a name='pframework'></a><div class=' method  js ruby android ios wp8' id='pframework'><h3><strong  >framework</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>STRING</span> <span class='label'>Read Only</span> </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pframework1" data-toggle="tab">Description</a></li><li ><a href="#pframework6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-framework'><div class="tab-pane fade active in" id="pframework1"><p>Same as System.webViewFramework.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"> </p></div></p></div><div class="tab-pane fade" id="pframework2"></div><div class="tab-pane fade" id="pframework5"></div><div class="tab-pane fade" id="pframework6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.WebView.framework</code> </li><li>Ruby: <code>Rho::WebView.framework</code></li></ul></li></ul></div></div></div>  </div><a name='pfullScreen'></a><div class=' method  js ruby android' id='pfullScreen'><h3><strong  >fullScreen</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>BOOLEAN</span>  </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pfullScreen1" data-toggle="tab">Description</a></li><li ><a href="#pfullScreen2" data-toggle="tab">Params</a></li><li ><a href="#pfullScreen6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-fullScreen'><div class="tab-pane fade active in" id="pfullScreen1"><p>Use full screen mode.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"> </p></div></p></div><div class="tab-pane fade" id="pfullScreen2"><p><strong>Default:</strong> false</p></div><div class="tab-pane fade" id="pfullScreen5"></div><div class="tab-pane fade" id="pfullScreen6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.WebView.fullScreen</code> </li><li>Ruby: <code>Rho::WebView.fullScreen</code></li></ul></li></ul></div></div></div>  </div><a name='pnavigationTimeout'></a><div class=' method  js ruby' id='pnavigationTimeout'><h3><strong  >navigationTimeout</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>INTEGER</span>  </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pnavigationTimeout1" data-toggle="tab">Description</a></li><li ><a href="#pnavigationTimeout2" data-toggle="tab">Params</a></li><li ><a href="#pnavigationTimeout6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-navigationTimeout'><div class="tab-pane fade active in" id="pnavigationTimeout1"><p>Can be defined in config.xml: Navigation\NavTimeout. Number of milliseconds(maximum is 45000) before the browser times out and navigates to the page specified in the badlink setting. If it is determined that the destination is unreachable regardless of wait time, the badlink may be loaded before NAVTIMEOUT. This is the time taken to establish communication with the server, not the time taken to fully load the page.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"> </p></div></p></div><div class="tab-pane fade" id="pnavigationTimeout2"><p><strong>Default:</strong> 0</p></div><div class="tab-pane fade" id="pnavigationTimeout5"></div><div class="tab-pane fade" id="pnavigationTimeout6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.WebView.navigationTimeout</code> </li><li>Ruby: <code>Rho::WebView.navigationTimeout</code></li></ul></li></ul></div></div></div>  </div><a name='pscrollTechnique'></a><div class=' method  js ruby' id='pscrollTechnique'><h3><strong  >scrollTechnique</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>STRING</span> <span class='label'>Read Only</span> </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pscrollTechnique1" data-toggle="tab">Description</a></li><li ><a href="#pscrollTechnique2" data-toggle="tab">Params</a></li><li ><a href="#pscrollTechnique5" data-toggle="tab">Values</a></li><li ><a href="#pscrollTechnique6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-scrollTechnique'><div class="tab-pane fade active in" id="pscrollTechnique1"><p>Specifies the technique used to scroll about the page.Defines in config.xml: Scrolling\ScrollTechnique.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"> </p></div></p></div><div class="tab-pane fade" id="pscrollTechnique2"><p><strong>Default:</strong> FingerScroll</p></div><div class="tab-pane fade" id="pscrollTechnique5"><p><strong>Possible Values</strong> (<span class='text-info'>STRING</span>):</p> <dt>Constant: Rho.WebView.SCROLL_NONE (For Ruby use "::" instead of ".")<br/> String: None </dt><dd><p>No scrollbars will be displayed and the page will not respond to finger swipes.</p>
</dt><dt>Constant: Rho.WebView.SCROLL_SCROLLBARS (For Ruby use "::" instead of ".")<br/> String: Scrollbars </dt><dd><p>When the size of the page is larger than the screen scrollbars will be presented which can be used to scroll the page.</p>
</dt><dt>Constant: Rho.WebView.SCROLL_FINGER (For Ruby use "::" instead of ".")<br/> String: FingerScroll </dt><dd><p>You can scroll around the page using finger swiping.</p>
</dt></dl></div><div class="tab-pane fade" id="pscrollTechnique6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.WebView.scrollTechnique</code> </li><li>Ruby: <code>Rho::WebView.scrollTechnique</code></li></ul></li></ul></div></div></div>  </div><a name='ptextZoomLevel'></a><div class=' method  js ruby' id='ptextZoomLevel'><h3><strong  >textZoomLevel</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>INTEGER</span>  </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#ptextZoomLevel1" data-toggle="tab">Description</a></li><li ><a href="#ptextZoomLevel6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-textZoomLevel'><div class="tab-pane fade active in" id="ptextZoomLevel1"><p>Sets the font size to be displayed on the page, set to 0 for the smallest font and 4 for the largest font.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"> </p></div></p></div><div class="tab-pane fade" id="ptextZoomLevel2"></div><div class="tab-pane fade" id="ptextZoomLevel5"></div><div class="tab-pane fade" id="ptextZoomLevel6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.WebView.textZoomLevel</code> </li><li>Ruby: <code>Rho::WebView.textZoomLevel</code></li></ul></li></ul></div></div></div>  </div><a name='puserAgent'></a><div class=' method  js ruby' id='puserAgent'><h3><strong  >userAgent</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>STRING</span> <span class='label'>Read Only</span> </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#puserAgent1" data-toggle="tab">Description</a></li><li ><a href="#puserAgent6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-userAgent'><div class="tab-pane fade active in" id="puserAgent1"><p>Defines in config.xml: Navigation\UserAgent. When visiting a web server the WebKit browser will report its self as the specified user agent. Use the following substitution variables:</p>

<pre><code>                %p - platform name ("Windows CE " + version number)
                %w - WebKit version number
                %e - MotorolaWebKit version number.
</code></pre>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"> </p></div></p></div><div class="tab-pane fade" id="puserAgent2"></div><div class="tab-pane fade" id="puserAgent5"></div><div class="tab-pane fade" id="puserAgent6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.WebView.userAgent</code> </li><li>Ruby: <code>Rho::WebView.userAgent</code></li></ul></li></ul></div></div></div>  </div><a name='pviewportEnabled'></a><div class=' method  js ruby' id='pviewportEnabled'><h3><strong  >viewportEnabled</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>BOOLEAN</span> <span class='label'>Read Only</span> </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pviewportEnabled1" data-toggle="tab">Description</a></li><li ><a href="#pviewportEnabled2" data-toggle="tab">Params</a></li><li ><a href="#pviewportEnabled6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-viewportEnabled'><div class="tab-pane fade active in" id="pviewportEnabled1"><p>Whether to enable or disable viewport meta tag processing.Defines in config.xml: Navigation\ViewportEnabled.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"> </p></div></p></div><div class="tab-pane fade" id="pviewportEnabled2"><p><strong>Default:</strong> true</p></div><div class="tab-pane fade" id="pviewportEnabled5"></div><div class="tab-pane fade" id="pviewportEnabled6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.WebView.viewportEnabled</code> </li><li>Ruby: <code>Rho::WebView.viewportEnabled</code></li></ul></li></ul></div></div></div>  </div><a name='pviewportWidth'></a><div class=' method  js ruby' id='pviewportWidth'><h3><strong  >viewportWidth</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>INTEGER</span> <span class='label'>Read Only</span> </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pviewportWidth1" data-toggle="tab">Description</a></li><li ><a href="#pviewportWidth6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-viewportWidth'><div class="tab-pane fade active in" id="pviewportWidth1"><p>Default viewport width to use for pages that do not have a viewport meta tag (uses 1:1 scaling if not specified).Defines in config.xml: Navigation\ViewportWidth.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"> </p></div></p></div><div class="tab-pane fade" id="pviewportWidth2"></div><div class="tab-pane fade" id="pviewportWidth5"></div><div class="tab-pane fade" id="pviewportWidth6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.WebView.viewportWidth</code> </li><li>Ruby: <code>Rho::WebView.viewportWidth</code></li></ul></li></ul></div></div></div>  </div><a name='pzoomPage'></a><div class=' method  js ruby' id='pzoomPage'><h3><strong  >zoomPage</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>FLOAT</span>  </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pzoomPage1" data-toggle="tab">Description</a></li><li ><a href="#pzoomPage6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-zoomPage'><div class="tab-pane fade active in" id="pzoomPage1"><p>Sets the zoom factor of the page. Factor 1.0 is no zoom, values less than 1.0 are zoomed out and values greater than 1.0 are zoomed in.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"> </p></div></p></div><div class="tab-pane fade" id="pzoomPage2"></div><div class="tab-pane fade" id="pzoomPage5"></div><div class="tab-pane fade" id="pzoomPage6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.WebView.zoomPage</code> </li><li>Ruby: <code>Rho::WebView.zoomPage</code></li></ul></li></ul></div></div></div>  </div>
<a name='Examples'></a>
<h2><i class='icon-edit'></i>Examples</h2>

<a name='e0'></a><div class=' example' id='e0'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample0"><strong>Execute javascript</strong></div><div id="cExample0" class="accordion-body">  <div class="accordion-inner">
<p>You can call the WebView and make it execute JavaScript code from a Ruby controller. This can be particularly helpful in order to reuse JavaScript functionality that is already included in your pages.</p>
<ul class='nav nav-tabs' id='exI0-S0Tab'><li class='active'><a href='#exI0-S0RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI0-S0RUBY'><pre class='CodeRay'><code>:::ruby

#call javascript alert on the current page
Rho::WebView.executeJavascript("alert('This is Webview.executejavascript function');")

                            </code></pre></div></div>
<p>As an example, you can invoke JQuery Mobile&rsquo;s changePage.</p>
<ul class='nav nav-tabs' id='exI0-S1Tab'><li class='active'><a href='#exI0-S1RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI0-S1RUBY'><pre class='CodeRay'><code>:::ruby

#call JQuery Mobile from a Ruby controller
Rho::WebView.executeJavascript("$.mobile.changePage('#my_page');")

                            </code></pre></div></div>
<p>You can also call your own functions.</p>
<ul class='nav nav-tabs' id='exI0-S2Tab'><li class='active'><a href='#exI0-S2JS' data-toggle='tab'>Javascript</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI0-S2JS'><pre class='CodeRay'><code>:::javascript

function greet(name) {
    alert("Hello, "+name);  
}

                            </code></pre></div></div>
<p>From the Ruby controller we can execute the JavaScript function that may be in the view.</p>
<ul class='nav nav-tabs' id='exI0-S3Tab'><li class='active'><a href='#exI0-S3RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI0-S3RUBY'><pre class='CodeRay'><code>:::ruby

#call a custom JavaScript function from Ruby
Rho::WebView.executeJavascript("greet('John Doe');")

                            </code></pre></div></div>  </div></div></div></div><a name='e1'></a><div class=' example' id='e1'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample1"><strong>Use full-screen mode</strong></div><div id="cExample1" class="accordion-body">  <div class="accordion-inner">
<p>The WebView can be set to use all the available screen real-estate by turning on &ldquo;full-screen&rdquo; mode.</p>
<ul class='nav nav-tabs' id='exI1-S0Tab'><li class='active'><a href='#exI1-S0RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI1-S0RUBY'><pre class='CodeRay'><code>:::ruby

# Toggle fullScreen on / off
Rho::WebView.fullScreen = !Rho::WebView.fullScreen 

                            </code></pre></div></div>
<p>This property can also be assigned to in JavaScript.</p>
<ul class='nav nav-tabs' id='exI1-S1Tab'><li class='active'><a href='#exI1-S1JS' data-toggle='tab'>Javascript</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI1-S1JS'><pre class='CodeRay'><code>:::javascript

// Fullscreen can also be invoked from JavaScript
Rho.WebView.fullScreen = true;

Rho.WebView.fullScreen = false;

                            </code></pre></div></div>  </div></div></div></div><a name='e2'></a><div class=' example' id='e2'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample2"><strong>Navigate</strong></div><div id="cExample2" class="accordion-body">  <div class="accordion-inner">
<p>This is the section that will appear before the code block.</p>
<ul class='nav nav-tabs' id='exI2-S0Tab'><li class='active'><a href='#exI2-S0RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI2-S0RUBY'><pre class='CodeRay'><code>:::ruby

#Force WebView to navigate to a URL.
Rho::WebView.navigate(url_for(:action =&gt; :my_action))

                            </code></pre></div></div>
<p>You can also navigate outside of your application, to an external site.</p>
<ul class='nav nav-tabs' id='exI2-S1Tab'><li class='active'><a href='#exI2-S1RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI2-S1RUBY'><pre class='CodeRay'><code>:::ruby

#Navigate out of the local application and into an externally-served site
Rho::WebView.navigate("http://www.example.com");

                            </code></pre></div></div>
<p>This API is also available from JavaScript.</p>
<ul class='nav nav-tabs' id='exI2-S2Tab'><li class='active'><a href='#exI2-S2JS' data-toggle='tab'>Javascript</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI2-S2JS'><pre class='CodeRay'><code>:::javascript

//Navigate out of the local application and into an externally-served site
Rho.WebView.navigate("http://www.example.com");

                            </code></pre></div></div>  </div></div></div></div><a name='e3'></a><div class=' example' id='e3'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample3"><strong>Navigate back</strong></div><div id="cExample3" class="accordion-body">  <div class="accordion-inner">
<p>This is the section that will appear before the code block.</p>
<ul class='nav nav-tabs' id='exI3-S0Tab'><li class='active'><a href='#exI3-S0RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI3-S0RUBY'><pre class='CodeRay'><code>:::ruby

#Force WebView to navigate to the previous page using Browser back.
Rho::WebView.navigateBack

                            </code></pre></div></div>
<p>The same method is available in JavaScript.</p>
<ul class='nav nav-tabs' id='exI3-S1Tab'><li class='active'><a href='#exI3-S1JS' data-toggle='tab'>Javascript</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI3-S1JS'><pre class='CodeRay'><code>:::javascript

//Force WebView to navigate to the previous page using Browser back.
Rho.WebView.navigateBack();

                            </code></pre></div></div>  </div></div></div></div><a name='e4'></a><div class=' example' id='e4'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample4"><strong>Refresh the page</strong></div><div id="cExample4" class="accordion-body">  <div class="accordion-inner">
<p>Reload the current URL into the WebView. This is useful especially after having updated data that must be now shown to the user</p>
<ul class='nav nav-tabs' id='exI4-S0Tab'><li class='active'><a href='#exI4-S0RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI4-S0RUBY'><pre class='CodeRay'><code>:::ruby

# Update database or variables here
# ...     
# Refresh the current page to show new information
Rho::WebView.refresh

                            </code></pre></div></div>
<p>By default, &ldquo;refresh&rdquo; will update the current view. If you are using the native Tabbar and have multiple WebViews, you can specify which one to refresh.</p>
<ul class='nav nav-tabs' id='exI4-S1Tab'><li class='active'><a href='#exI4-S1RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI4-S1RUBY'><pre class='CodeRay'><code>:::ruby

# Reload the page on WebView number 2
Rho::WebView.refresh(2)

                            </code></pre></div></div>
<p>Also available from JavaScript.</p>
<ul class='nav nav-tabs' id='exI4-S2Tab'><li class='active'><a href='#exI4-S2JS' data-toggle='tab'>Javascript</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI4-S2JS'><pre class='CodeRay'><code>:::javascript

// Reload the current page
Rho.WebView.refresh()

// Reload the page on WebView number 3
Rho.WebView.refresh(3)

                            </code></pre></div></div>  </div></div></div></div></div>